themes/SuiteR/css/style.css
/* ... */
@media(min-width:979px) and (max-width:1279px){
    #cal-edit{
        max-height:50% !important;
        max-width:55% !important;
        overflow:scroll;
        margin:0 0 0 250px;
    }
}

@media(min-width:1280px){
    #cal-edit{
        margin:0 0 0 200px;
    }
}

#forgotpasslink {
    margin: 10px 0 0 0;
}

@media (max-width:480px) {
    .paginationChangeButtons {
        max-width:125px;
    }
    .paginationActionButtons{
        padding:30px;
    }

    #listViewStartButton_top, #listViewPrevButton_top, #listViewNextButton_top, #listViewEndButton_top,
    #listViewStartButton_bottom, #listViewPrevButton_bottom, #listViewNextButton_bottom, #listViewEndButton_bottom,
    #listViewStartButton_, #listViewPrevButton_, #listViewNextButton_, #listViewEndButton_{
        padding: 2px 5px 2px 5px;
        margin: 0;
    }

    .pageNumbers {
        font-size: 10px;
    }

    #selectedRecordsTop {
        max-width: 100px;
        float: left;
    }
    ul.clickMenu li span {
        width: 16px;
        height: 16px;
        float: left;
        background: url("../../../../index.php?entryPoint=getImage&themeName=suiteresponsive&imageName=actionMenuArrow.png") no-repeat scroll 6px -28px transparent;
        cursor: pointer;
    }
}

#buttontoggle {
    position: fixed;
    left: 0;
    top: 130px;
    background:#eeeeee;
    z-index: 100;
    height:32px;
    width:24px;
    padding:8px 4px 8px 4px;
}

/* Override bootstrap styles where not required */
.navbar-inverse .navbar-nav > .open > a, .navbar-inverse .navbar-nav > .open > a:hover, .navbar-inverse .navbar-nav > .open > a:focus {
    color: #FFF;
    background:none !important;
}

.navbar-inverse .navbar-collapse, .navbar-inverse .navbar-form {
    border-color: #bbbbbb !important;
}

/* Dashlet CSS */

.dashletPanel .h3Row {
    background: #ffffff;
    color:#ffffff;
    border-bottom:1px solid #eeeeee; !important;
}

.h3Row {
    padding:5px 10px 5px 10px;
    margin:5px 0 5px 0;
}

.dashletPanel{
    border:1px solid #eeeeee; !important;
    box-shadow: #cccccc 0 5px 10px;
    -moz-box-shadow: #cccccc 0 5px 10px;
    -webkit-box-shadow: #cccccc 0 5px 10px;
}

.dashletPanel .h3Row h3{
    color:#3C8DBC;
    font-weight:bold;
    margin:0 0 0 10px;
}

#dashletbuttons{
    color:#3C8DBC;
    margin: 0 2px 0 2px;
}

#dashletbuttons:hover{
    opacity:0.8;
}

.dashletToolSet{
    margin: 0 10px 0 0;
}

.teamNoticeBox{
    border:none;
}

.oddListRowS1, .evenListRowS1{
    background:#f7f7f7 !important;
    border-top:1px solid #dddddd;
    border-bottom:1px solid #dddddd;
}

.list tr.oddListRowS1 td, .list tr.evenListRowS1 td{
    padding-top:10px !important;
    padding-bottom:10px !important;
}

#copyright_data a{
    color: #000000;
    margin: 0 5px 0 5px;
}

#copyright_data a:hover, #links a:hover{
    cursor:pointer;
    text-decoration:none;
}

@media (min-width: 768px) {
    .showsearch{
        display:none;
    }
}

.helpIcon{
    display:none;
}

.paginationWrapper{
    float:right;
    margin:0;
    padding:0;
}

.paginationWrapper span, .paginationWrapper span {
    padding: 0;
    margin: 0;
}

[id^=list_subpanel_]
{
    margin-bottom: 25px !important;
    border: 1px solid #dddddd;
}

[id^=list_subpanel_] tr:last-child
{
    margin-bottom: 25px !important;
    border-bottom: none;
}

.h3Row{
    padding:0;
    margin:0;
}

div.action_buttons form {
    float:left;
}

.paginationWrapper {
    float:right;
}

/* Fix to override bootstrap for email module panel collapse/expand */

.yui-layout .yui-layout-clip-right .collapse, .yui-layout-hd .collapse, .yui-layout .yui-layout-clip-left .collapse{
    visibility:visible !important;
    display:block !important;
}

.actionmenulinks a span{
    padding:5px;
}

/* Fix to make Boostrap drop down hover on larger screens */

@media (min-width:1024px) {
    .navbar-nav > li:hover ul.dropdown-menu, #globalLinks:hover ul.dropdown-menu, #quickcreatetop:hover ul.dropdown-menu {
        display: block;
    }

    /* if you want to hide the arrow */
    a.menu:after, .dropdown-toggle:after {
        content: none;
    }
}

.table > thead > tr > th, .table > tbody > tr > th, .table > tfoot > tr > th, .table > thead > tr > td, .table > tbody > tr > td, .table > tfoot > tr > td {
    border-top: none;
}

.recently_viewed_link_container{
    width:100%;
    float:left;
    overflow: hidden;
}

.recently_viewed_link_container_sidebar{
    margin-bottom:10px;
    width:100%;
    float:left;
    overflow: hidden;
}

h3 span{
    font-weight:bold;
}

@media only screen and (max-width: 959px) {

    table.mceLayout, textarea.tinyMCE {
        width: 100% !important;
    }

    /* make the toolbar wrap */
    .mceToolbar td {
        display:table-row;
        float: left;
    }
    .mceToolbar td:nth-of-type(11){
        clear: left;
    }

    table.mceLayout, textarea.richEditor {
        width: 90% !important;
        overflow:scroll;
    }

    /* remove the toolbar wrap */
    .mceToolbar td {
        display:table-cell;
        float: none;
    }
    .mceToolbar td:nth-of-type(11){
        clear: none;
    }
    .defaultSkin .mceToolbar{
        height:auto !important;
    }
}

#layoutEditor .le_row {
    margin: 2px 3px;
    height:25px;
    clear: both;
    padding:0 10px 5px 20px !important;
}

#toolbox .le_panel, #toolbox .le_row, .le_field {
    width: 150px;
    float: left;
    border: 1px solid #808080;
    background: none repeat scroll 0% 0% #EEE;
    padding:0 !important;
    margin: 2px 3px;
}

#toolbox{
    overflow:auto;
}

@media(min-width:980px) {
    #dialog1_c {
        margin-left: 0%;
        margin-top:20px;
    }
    #dlg {
        left:40%;;
    }
    #dlg_c{
        left:50%;
    }
}

#dlg {
    left:300px;
    top:75px;
}

@media (max-width:1360px){
    #dlg{
        top:50px;
    }

    #dlg .bd{
        max-height:500px;
        overflow-y:scroll;
    }
}
/* ... */

